🎨 Remove HTML plugin

--- a/index.html
+++ b/index.html
@@ -4,22 +4,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<!-- title & favicon -->
-	<title><%- page_title %></title>
-	<link rel="icon" href="/favicon.png" type="image/png"/>
-	<link rel="canonical" href="<%- page_url %>"/>
-	
 	<!-- info -->
-	<meta name="author" content="<%- page_author %>"/>
-	<meta name="description" content="<%- page_description %>"/>
-	<meta name="keywords" content="<%- page_keywords %>"/>
-	
-	<!-- sharing -->
-	<meta property="og:title" content="<%- page_og_title %>"/>
-	<meta property="og:description" content="<%- page_og_description %>"/>
-	<meta property="og:url"   content="<%- page_og_url %>"/>
-	<meta property="og:image" content="<%- page_og_image %>"/>
-	<meta property="og:type"  content="<%- page_og_type %>"/>
+	<title>File Converter</title>
+	<meta name="description" content="Convert between video and image formats."/>
+	<link rel="canonical" href="https://heledron.com/tools/file-converter/"/>
+	<meta property="og:image" content="https://heledron.com/tools/file-converter/thumbnail.webp"/>
+	<meta name="author" content="Morgan"/>
+	<meta name="keywords" content="Heledron, Hadron, Cymaera, File, Converter, MP4, MOV"/>
+	<link rel="icon" href="/favicon.png" type="image/png"/>
 
 	<!-- scripts -->
 	<script type="module" src="./src/main.ts"></script>
