🎨 Fix build. Remove helion dep and use Tailwind

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 	<!-- scripts -->
 	<script type="module" src="./src/main.ts"></script>
 </head>
-<body>
+<body class="bg-surface text-onSurface accent-primary-500">
 </body>
 </html>
